fix not visible

--- a/src/perfectscrollbar/css/style.less
+++ b/src/perfectscrollbar/css/style.less
@@ -17,7 +17,6 @@
 
 .ps.ps--active-x>.ps__rail-x, .ps.ps--active-y>.ps__rail-y{
     display: block!important;
-    opacity: 0;
 }
 
 .ps-scrolling-y{
